test: test updates for new facade logic